--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -156,14 +156,18 @@ h2 a::after {
     position: absolute;
     inset: 0;
     pointer-events: none;
-    opacity: 0;
+    opacity: 1;
   
-    background:
+    background-color:
+      /*
       radial-gradient(100% 100% at var(--b1x) var(--b1y), var(--bg1) -100%, transparent),
       radial-gradient(100% 100% at var(--b2x) var(--b2y), var(--bg2) -100%, transparent),
       radial-gradient(100% 100% at var(--b3x) var(--b3y), var(--bg3) -100%, transparent),
       radial-gradient(100% 100% at var(--b4x) var(--b4y), var(--bg4) -100%, transparent),
-      var(--color-background); /* same as the sample’s trailing #ffffff color */
+      */
+      rgba(var(--brand-grey-rgb), 0.05);
+      /*background: linear-gradient(180deg,rgba(var(--brand-grey-rgb), 0) 0%, rgba(var(--brand-grey-rgb), 0.1) 100%);*/
+
     
     animation: g-4 10s ease-in-out infinite;
   }
