--- a/src/styles/archive/previewPane.module.css
+++ b/src/styles/archive/previewPane.module.css
@@ -127,7 +127,7 @@
     right: 0;
     padding-top: 8px;
     padding-bottom: max(8px, env(safe-area-inset-bottom));
-    background: rgba(var(--color-background-rgb), 0.7);
+    background: rgba(var(--color-background-rgb), 0);
 
     display: flex;
     justify-content: center;
@@ -144,17 +144,19 @@
     inset: 0;
     border-radius: inherit;
 
-    background: rgba(var(--brand-grey-rgb), 0.1);
-    backdrop-filter: saturate(180%) blur(20px);
-    -webkit-backdrop-filter: saturate(180%) blur(20px);
+    background: rgba(var(--brand-grey-rgb), 0);
+    backdrop-filter: saturate(180%) blur(40px);
+    -webkit-backdrop-filter: saturate(180%) blur(40px);
 
     pointer-events: none;
     z-index: -1;
+    border-top: 1px solid rgba(var(--color-foreground-rgb), .10);
 }
 
 .footerBar:hover::before {
 
-    background: rgba(var(--brand-grey-rgb), 0.2);
+    /* background: rgba(var(--brand-grey-rgb), 0.2); */
+    background-color: var(--color-background);
 
 }
 
