--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,13 +11,13 @@
 
 
 body {
-    font-family:  -apple-system,  BlinkMacSystemFont, var(--font-inter), "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+    font-family:  var(--font-inter),-apple-system,  BlinkMacSystemFont,  "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
     /* Adjust this value as needed */
     font-optical-sizing: auto;
     font-feature-settings: 'liga' 1, 'calt' 1;
     font-variant-ligatures: common-ligatures discretionary-ligatures;
     text-rendering: optimizeLegibility;
-    line-height: 1.3;
+    line-height: var(--line-h);
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     max-width: 100vw;
