--- a/src/styles/archive/archiveList.module.css
+++ b/src/styles/archive/archiveList.module.css
@@ -42,13 +42,13 @@
     grid-template-columns:
         40px                     /* Col 1 thumb – fixed */
         minmax(0, 1fr)           /* Col 2 TITLE – the only flexible one  */
-        32px                     /* Col 3 dot stack – fixed             */
-        210px                    /* Col 4 tag names – fixed (or adjust)  */
+        45px                     /* Col 3 dot stack – fixed             */
+        minmax(210px, 0.45fr)                    /* Col 4 tag names – fixed (or adjust)  */
         /*1.6fr                     Col 5 description – can stay flex or fixed */
         72px;                    /* Col 6 date – fixed   */
 
-    padding: 0 0;
-    margin: 0 var(--space-lg);
+    padding:  0.0  var(--space-md) ;
+    margin: 0 0.6rem;
 
     align-items: center;
     height: 1.7rem; 
