--- a/src/styles/ui/row.module.css
+++ b/src/styles/ui/row.module.css
@@ -89,9 +89,19 @@
   }
   
 
-  /* indent child items */
+
 .indentedRow {
-  padding-left: 2.5rem;
+    grid-template-columns:
+        40px                     /* Col 1 thumb – fixed */
+        minmax(0, 1fr)           /* Col 2 TITLE – the only flexible one  */
+        45px                     /* Col 3 dot stack – fixed             */
+        minmax(210px, 0.465fr)                    /* Col 4 tag names – fixed (or adjust)  */
+        /*1.6fr                     Col 5 description – can stay flex or fixed */
+        72px;                    /* Col 6 date – fixed   */
+
+    padding:  0.38rem 0;
+    padding-left: 2.2rem;
+    padding-right: var(--space-md);
 }
   /*
 .row4col[data-archive-row]:hover {
