--- a/src/styles/archive/previewPane.module.css
+++ b/src/styles/archive/previewPane.module.css
@@ -20,6 +20,10 @@
     /* important so flex children can shrink inside a constrained parent */
     min-height: 0;
     z-index: 3;
+
+    /* sidebar container query context */
+    container-type: size;
+    container-name: sidebar;
 }
 
 /* When condensed, width changes but scrolling behavior stays the same */
@@ -112,22 +116,24 @@
     position: relative;
     display: flex;
     justify-content: center;
+    align-items: center;
+    width: 100%;
+    /* 
+    height: clamp(200px, 30vh, 400px); 
+    */
+    /* cqh = container query height */
+    height: clamp(270px, 40cqh, 400px); 
     margin-bottom: 1rem;
-}
-
-.thumbnailWrapper::after {
-    content: '';
-    position: absolute;
-    inset: 0;
-    border-radius: var(--radius-sm);
-    pointer-events: none;
-    box-shadow: inset 0 0 1px rgba(0, 0, 0, .5);
 }
 
 .thumbnail {
     max-width: 100%;
+    max-height: 100%;
+    width: auto;
     height: auto;
+    object-fit: contain;
     border-radius: var(--radius-sm);
+    box-shadow:  0 0 1px rgba(0, 0, 0, .5);
 }
 
 /* text bits */
