--- a/src/styles/about/aboutPage.module.css
+++ b/src/styles/about/aboutPage.module.css
@@ -1,8 +1,8 @@
 /* globals.css (or about.module.css) */
 .aboutMain,
 .aboutMain * {
-  font-family: var(--font-jetbrains), monospace;
+  font-family: var(--font-mono), monospace;
   font-variation-settings: var(--var-md);
-  line-height: 1.3;
+  line-height: auto;
   font-size: var(--font-xs);
 }
